# rusttext

./: .gitignore  README.md
bindings/python/: Cargo.toml  pyproject.toml  setup.py
bindings/python/rusttext/: __init__.py
bindings/python/src/: lib.rs
rusttext/: Cargo.toml
rusttext/src/: lib.rs  loader.rs  vocabulary.rs  word.rs
